force-app/main/default/objects/Apttus__AccountHierarchy__c/fields/Apttus__AccountLeafId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AccountLeafId__c</fullName>
    <description>The account Id of the leaf.
Root &gt; Parent &gt; Leaf</description>
    <inlineHelpText>The account Id of the leaf.
Root &gt; Parent &gt; Leaf</inlineHelpText>
    <label>Account Leaf</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Hierarchies</relationshipLabel>
    <relationshipName>AccountHierarchiesLeaf</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>