force-app/main/default/objects/Apttus__AccountHierarchy__c/fields/Apttus__AccountLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AccountLevel__c</fullName>
    <description>The hierarchical level of the account of the accounts hierarchy.
It&apos;s used in the listing tree view in the account hierarchy to identify the indentation.</description>
    <inlineHelpText>The hierarchical level of the account of the accounts hierarchy.
It&apos;s used in the listing tree view in the account hierarchy to identify the indentation.</inlineHelpText>
    <label>Account Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>