force-app/main/default/objects/Apttus__AccountHierarchy__c/fields/Apttus__AccountParentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AccountParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account Id of the parent.
Root &gt; Parent &gt; Leaf</description>
    <inlineHelpText>The account Id of the parent.
Root &gt; Parent &gt; Leaf</inlineHelpText>
    <label>Account Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Hierarchies (Account)</relationshipLabel>
    <relationshipName>AccountHierarchiesParent</relationshipName>
    <type>Lookup</type>
</CustomField>