force-app/main/default/objects/Apttus__AccountHierarchy__c/fields/Apttus__AccountRootId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AccountRootId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account Id of the root. A root account is the primordial account which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root account for a hierarchy.
Root &gt; Parent &gt; Leaf</description>
    <inlineHelpText>The account Id of the root. A root account is the primordial account which has all of the children, grandchildren, etc. in the hierarchy. There can be only one root account for a hierarchy.
Root &gt; Parent &gt; Leaf</inlineHelpText>
    <label>Account Root</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Hierarchies (Account)</relationshipLabel>
    <relationshipName>AccountHierarchiesRoot</relationshipName>
    <type>Lookup</type>
</CustomField>